get_activations.3986654.4.err
[=== Module anaconda/3 loaded ===]
[=== Module cudatoolkit/11.7 loaded ===]
  File "get_activations.py", line 133
    ]for patch in activations_list[m][:, head]
    ^
SyntaxError: invalid syntax
